Adicionando o daily coins
