# routes/web.php
@@ -27,6 +27,7 @@ $router->get('users/{discord_id}','Users\\UsersController@show');
 $router->put('users/{discord_id}','Users\\UsersController@update');
 $router->post('users/wipe','Users\\UsersController@wipe');
 $router->post('users/{discord_id}/levelup','Levelup\\LevelupController@store');
+$router->post('users/{discord_id}/daily', 'Users\\UsersController@daily');
 $router->get('ranking','Levelup\\RankingController@index');
 
 
